// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List View Component renders ListView with appointments correctly 1`] = `
<DocumentFragment>
  <table
    class="appointmentListView"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          Patient ID
        </th>
        <th
          class="table-mid-width"
        >
          Patient Name
        </th>
        <th
          class=""
        >
          Date
        </th>
        <th
          class=""
        >
          Start Time
        </th>
        <th
          class=""
        >
          End Time
        </th>
        <th
          class="table-mid-width"
        >
          Provider
        </th>
        <th
          class=""
        >
          Speciality
        </th>
        <th
          class="table-mid-width"
        >
          Service
        </th>
        <th
          class="table-mid-width"
        >
          Service Appointment Type
        </th>
        <th
          class=""
        >
          Status
        </th>
        <th
          class=""
        >
          Walk In
        </th>
        <th
          class="table-mid-width"
        >
          Location
        </th>
        <th
          class="table-mid-width"
        >
          Additional Info
        </th>
        <th
          class=""
        >
          Notes
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class=""
        >
          GAN203012
        </td>
        <td
          class="table-mid-width"
        >
          Test Diabetes
        </td>
        <td
          class=""
        >
          24 Mar 20
        </td>
        <td
          class=""
        >
          10:00 am
        </td>
        <td
          class=""
        >
          10:30 am
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Cardiology
        </td>
        <td
          class="table-mid-width"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Scheduled
        </td>
        <td
          class=""
        >
          Yes
        </td>
        <td
          class="table-mid-width"
        >
          OPD-1
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        />
      </tr>
      <tr>
        <td
          class=""
        >
          GAN203011
        </td>
        <td
          class="table-mid-width"
        >
          Test Con
        </td>
        <td
          class=""
        >
          24 Mar 20
        </td>
        <td
          class=""
        >
          9:00 am
        </td>
        <td
          class=""
        >
          9:30 am
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Cardiology
        </td>
        <td
          class="table-mid-width"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Scheduled
        </td>
        <td
          class=""
        >
          Yes
        </td>
        <td
          class="table-mid-width"
        >
          OPD-1
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Urgent
        </td>
      </tr>
      <tr>
        <td
          class=""
        >
          GAN203019
        </td>
        <td
          class="table-mid-width"
        >
          Test Con
        </td>
        <td
          class=""
        >
          22 Mar 20
        </td>
        <td
          class=""
        >
          11:00 am
        </td>
        <td
          class=""
        >
          11:30 am
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Psychology
        </td>
        <td
          class="table-mid-width"
        >
          Psychology
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Scheduled
        </td>
        <td
          class=""
        >
          Yes
        </td>
        <td
          class="table-mid-width"
        >
          General Ward
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Nothing important
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`List View Component renders ListView with background colors based on status 1`] = `
<DocumentFragment>
  <table
    class="appointmentListView"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          Patient ID
        </th>
        <th
          class="table-mid-width"
        >
          Patient Name
        </th>
        <th
          class=""
        >
          Date
        </th>
        <th
          class=""
        >
          Start Time
        </th>
        <th
          class=""
        >
          End Time
        </th>
        <th
          class="table-mid-width"
        >
          Provider
        </th>
        <th
          class=""
        >
          Speciality
        </th>
        <th
          class="table-mid-width"
        >
          Service
        </th>
        <th
          class="table-mid-width"
        >
          Service Appointment Type
        </th>
        <th
          class=""
        >
          Status
        </th>
        <th
          class=""
        >
          Walk In
        </th>
        <th
          class="table-mid-width"
        >
          Location
        </th>
        <th
          class="table-mid-width"
        >
          Additional Info
        </th>
        <th
          class=""
        >
          Notes
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="missedAppointment"
        >
          GAN203012
        </td>
        <td
          class="table-mid-width missedAppointment"
        >
          Test Diabetes
        </td>
        <td
          class="missedAppointment"
        >
          24 Mar 20
        </td>
        <td
          class="missedAppointment"
        >
          10:00 am
        </td>
        <td
          class="missedAppointment"
        >
          10:30 am
        </td>
        <td
          class="table-mid-width missedAppointment"
        />
        <td
          class="missedAppointment"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width missedAppointment"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width missedAppointment"
        />
        <td
          class="missedAppointment"
        >
          Missed
        </td>
        <td
          class="missedAppointment"
        >
          Yes
        </td>
        <td
          class="table-mid-width missedAppointment"
        >
          OPD-1
        </td>
        <td
          class="table-mid-width missedAppointment"
        />
        <td
          class="missedAppointment"
        />
      </tr>
      <tr>
        <td
          class="cancelledAppointment"
        >
          GAN203011
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        >
          Test Con
        </td>
        <td
          class="cancelledAppointment"
        >
          24 Mar 20
        </td>
        <td
          class="cancelledAppointment"
        >
          9:00 am
        </td>
        <td
          class="cancelledAppointment"
        >
          9:30 am
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        />
        <td
          class="cancelledAppointment"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        >
          Cardiology
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        />
        <td
          class="cancelledAppointment"
        >
          Cancelled
        </td>
        <td
          class="cancelledAppointment"
        >
          Yes
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        >
          OPD-1
        </td>
        <td
          class="table-mid-width cancelledAppointment"
        />
        <td
          class="cancelledAppointment"
        >
          Urgent
        </td>
      </tr>
      <tr>
        <td
          class=""
        >
          GAN203019
        </td>
        <td
          class="table-mid-width"
        >
          Test Con
        </td>
        <td
          class=""
        >
          22 Mar 20
        </td>
        <td
          class=""
        >
          11:00 am
        </td>
        <td
          class=""
        >
          11:30 am
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Psychology
        </td>
        <td
          class="table-mid-width"
        >
          Psychology
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Scheduled
        </td>
        <td
          class=""
        >
          Yes
        </td>
        <td
          class="table-mid-width"
        >
          General Ward
        </td>
        <td
          class="table-mid-width"
        />
        <td
          class=""
        >
          Nothing important
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`List View Component renders ListView with no appointments correctly 1`] = `
<DocumentFragment>
  <div
    class="noAppointmentsListView"
  >
    No appointments found
  </div>
</DocumentFragment>
`;
